# hackathon_template

./: Unster.md  rust-toolchain.toml
FlexNetGX/gx-blockchain/src/: instructions.rs  lib.rs  state.rs  (+2 more)
FlexNetGX/gx-web/: Cargo.toml
FlexNetGX/gx-web/src/: FYI.sql  README.md  availableBounties.html  bountycreatorControlPanel.html  bountycreatorDashboard.html  bountyhunterDashboard.html  bountymanager.html  bountymanagerDashboard.html  completedSurveys.html  forgot-password.html  genesisBountyCreator.html  login.html  settings.html  survey.html  tables  temp-setup.html  userProfile.html
FlexNetGX/gx-web/src/components/: header.html  mod.rs  nav.html  sidebar.html
FlexNetGX/gx-web/src/components/bounty/: visualization.rs
FlexNetGX/gx-web/src/components/dashboard/: bountycreator.rs  bountyhunter.rs  mod.rs  research.rs
FlexNetGX/gx-web/src/css/: research.css
FlexNetGX/gx-web/src/css/components/: admin-control-panel.css
FlexNetGX/gx-web/src/js/: admincontrolpanel.js  availablesurveys.js  bountyhunterdashboard.js  completedsurveys.js  constants.js  index.js  login.js  main.js  messages.js  register.js  registrationservice.js  research.js  researchdashboard.js  statemanager.js  survey.js  surveymanager.js  userprofile.js  welcomemanager.js
FlexNetGX/gx-web/src/js/modules/: database.js  navigation.js
FlexNetGX/gx-web/src/recover/: admincontrolpanel.js  bountycreatorcontrolpanel.js  login.js
FlexNetGX/gx-web/src/services/: bountycreator.rs  bountyhunter.rs  bountymanager.rs
FlexNetGX/gx-web/src/state/: surveys.rs
FlexNetGX/gx-web/src/templates/: auth.html
(+19 files in other folders)
